--- a/src/PingApp.Infrastructure/PingApp.Infrastructure.csproj
+++ b/src/PingApp.Infrastructure/PingApp.Infrastructure.csproj
@@ -31,16 +31,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.3\lib\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="Lucene.Net">
       <HintPath>..\packages\Lucene.Net.2.9.4.1\lib\net40\Lucene.Net.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject">
+      <HintPath>..\packages\Ninject.3.0.0.15\lib\net40\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="PanGu">
       <HintPath>..\packages\PanGu\PanGu.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,13 +62,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAppIndexer.cs" />
+    <Compile Include="ICatalogParser.cs" />
+    <Compile Include="IUpdateNotifier.cs" />
+    <Compile Include="StandardAppParser.cs" />
+    <Compile Include="StandardCatalogParser.cs" />
+    <Compile Include="IAppParser.cs" />
+    <Compile Include="IWebDownload.cs" />
+    <Compile Include="LuceneIndexer.cs" />
     <Compile Include="Lucene\PanGuAnalyzer.cs" />
     <Compile Include="Lucene\PanGuTokenizer.cs" />
+    <Compile Include="ProgramSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StandardUpdateNotifier.cs" />
     <Compile Include="Utility.cs" />
+    <Compile Include="StandardWebDownload.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PingApp.Entity\PingApp.Entity.csproj">
+      <Project>{d1ca9a20-917d-44a6-a8d8-1cfe169fa204}</Project>
+      <Name>PingApp.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PingApp.Repository\PingApp.Repository.csproj">
+      <Project>{65ce8a86-a790-4e23-8fc6-8d2569e86fcf}</Project>
+      <Name>PingApp.Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
