--- a/src/PingApp.Infrastructure/packages.config
+++ b/src/PingApp.Infrastructure/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack" version="1.4.3" />
   <package id="Lucene.Net" version="2.9.4.1" />
+  <package id="Newtonsoft.Json" version="4.5.1" />
+  <package id="Ninject" version="3.0.0.15" />
+  <package id="NLog" version="2.0.0.2000" />
   <package id="SharpZipLib" version="0.86.0" />
 </packages>
